--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,8 +1,8 @@
-name: Generate EzTheBoss Snake 🐍
+name: EzTheBoss Snake Eats and Creates 🐍
 
 on:
   schedule:
-    - cron: "0 */6 * * *"  # Her 6 saatte bir çalışır
+    - cron: "0 */6 * * *"
   workflow_dispatch:
   push:
     branches:
@@ -18,106 +18,225 @@ jobs:
       id-token: write
     
     steps:
-      - name: 🚀 Checkout Repository
+      - name: 🚀 Checkout
         uses: actions/checkout@v4
         
-      - name: 🐍 Generate EzTheBoss Snake Animation
+      - name: 🐍 Generate Base Snake
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: jokerizm3169
           outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-            dist/eztheboss-snake.svg?color_snake=#f9ca24&color_dots=#f0932b,#eb4d4b,#6ab04c,#22a6b3,#be2edd
-            dist/ezbro-snake.svg?color_snake=#00d2d3&color_dots=#ff9ff3,#54a0ff,#5f27cd,#00d2d3,#ff9f43
-          
-      - name: 🎨 Create Custom EzTheBoss Animation
+            dist/base-snake.svg
+            
+      - name: 🎨 Create EzTheBoss → ezbro Animation
         run: |
           mkdir -p dist/custom
           
-          # EzTheBoss yazısını oluştur
-          cat > dist/custom/eztheboss-text.svg << 'EOF'
-          <svg width="800" height="200" xmlns="http://www.w3.org/2000/svg">
+          # Ana animasyon SVG'sini oluştur
+          cat > dist/custom/eztheboss-ezbro-animation.svg << 'EOF'
+          <svg width="800" height="400" xmlns="http://www.w3.org/2000/svg">
             <defs>
-              <linearGradient id="goldGradient" x1="0%" y1="0%" x2="100%" y2="0%">
-                <stop offset="0%" style="stop-color:#FFD700;stop-opacity:1" />
-                <stop offset="50%" style="stop-color:#FFA500;stop-opacity:1" />
-                <stop offset="100%" style="stop-color:#FF8C00;stop-opacity:1" />
+              <!-- Gradient tanımları -->
+              <linearGradient id="goldGrad" x1="0%" y1="0%" x2="100%" y2="0%">
+                <stop offset="0%" style="stop-color:#FFD700"/>
+                <stop offset="100%" style="stop-color:#FFA500"/>
               </linearGradient>
+              
+              <linearGradient id="neonGrad" x1="0%" y1="0%" x2="100%" y2="0%">
+                <stop offset="0%" style="stop-color:#00FFFF"/>
+                <stop offset="100%" style="stop-color:#8000FF"/>
+              </linearGradient>
+              
+              <!-- Glow efektleri -->
               <filter id="glow">
                 <feGaussianBlur stdDeviation="3" result="coloredBlur"/>
-                <feMerge> 
+                <feMerge>
                   <feMergeNode in="coloredBlur"/>
                   <feMergeNode in="SourceGraphic"/>
                 </feMerge>
               </filter>
+              
+              <!-- Snake animasyonu -->
+              <style>
+                .snake-body { fill: #32CD32; }
+                .snake-head { fill: #228B22; }
+                .contribution-square { width: 12px; height: 12px; rx: 2; }
+                .eaten { fill: #0d1117; opacity: 0; }
+                .created { fill: #39d353; opacity: 1; }
+                
+                /* EzTheBoss yazısı animasyonu */
+                .eztheboss-letter { 
+                  fill: url(#goldGrad); 
+                  font-family: 'Arial Black', sans-serif; 
+                  font-size: 24px; 
+                  font-weight: bold;
+                  filter: url(#glow);
+                }
+                
+                /* ezbro yazısı animasyonu */
+                .ezbro-letter { 
+                  fill: url(#neonGrad); 
+                  font-family: 'Arial Black', sans-serif; 
+                  font-size: 20px; 
+                  font-weight: bold;
+                  filter: url(#glow);
+                  opacity: 0;
+                }
+                
+                /* Snake hareket animasyonu */
+                .snake-path {
+                  animation: snakeMove 10s infinite linear;
+                }
+                
+                /* Yazı yeme animasyonu */
+                .eat-animation {
+                  animation: eatText 10s infinite linear;
+                }
+                
+                /* Yazı bırakma animasyonu */
+                .create-animation {
+                  animation: createText 10s infinite linear;
+                }
+                
+                @keyframes snakeMove {
+                  0% { transform: translateX(-50px); }
+                  30% { transform: translateX(200px); }
+                  60% { transform: translateX(400px); }
+                  100% { transform: translateX(600px); }
+                }
+                
+                @keyframes eatText {
+                  0% { opacity: 1; }
+                  30% { opacity: 0.5; }
+                  50% { opacity: 0; }
+                  100% { opacity: 0; }
+                }
+                
+                @keyframes createText {
+                  0% { opacity: 0; }
+                  60% { opacity: 0; }
+                  80% { opacity: 0.5; }
+                  100% { opacity: 1; }
+                }
+              </style>
             </defs>
             
-            <text x="400" y="100" font-family="Arial Black, sans-serif" font-size="48" 
-                  font-weight="bold" text-anchor="middle" fill="url(#goldGradient)" 
-                  filter="url(#glow)" stroke="#B8860B" stroke-width="2">
-              EzTheBoss
+            <!-- Arka plan -->
+            <rect width="800" height="400" fill="#0d1117"/>
+            
+            <!-- Başlık -->
+            <text x="400" y="30" text-anchor="middle" fill="#ffffff" font-size="18" font-weight="bold">
+              🐍 EzTheBoss Snake Animation 🐍
             </text>
             
-            <text x="400" y="150" font-family="Arial, sans-serif" font-size="24" 
-                  text-anchor="middle" fill="#32CD32" opacity="0.8">
-              🐍 Snake is eating this text... 🐍
+            <!-- EzTheBoss yazısı (yenilecek) -->
+            <g class="eat-animation">
+              <text x="150" y="120" class="eztheboss-letter">E</text>
+              <text x="170" y="120" class="eztheboss-letter">z</text>
+              <text x="185" y="120" class="eztheboss-letter">T</text>
+              <text x="205" y="120" class="eztheboss-letter">h</text>
+              <text x="225" y="120" class="eztheboss-letter">e</text>
+              <text x="245" y="120" class="eztheboss-letter">B</text>
+              <text x="265" y="120" class="eztheboss-letter">o</text>
+              <text x="285" y="120" class="eztheboss-letter">s</text>
+              <text x="305" y="120" class="eztheboss-letter">s</text>
+            </g>
+            
+            <!-- Snake -->
+            <g class="snake-path">
+              <!-- Snake gövdesi -->
+              <circle cx="0" cy="150" r="8" class="snake-body"/>
+              <circle cx="-15" cy="150" r="7" class="snake-body"/>
+              <circle cx="-30" cy="150" r="6" class="snake-body"/>
+              <circle cx="-45" cy="150" r="5" class="snake-body"/>
+              
+              <!-- Snake kafası -->
+              <circle cx="15" cy="150" r="10" class="snake-head"/>
+              <circle cx="18" cy="145" r="2" fill="#ffffff"/> <!-- Göz -->
+              <circle cx="18" cy="155" r="2" fill="#ffffff"/> <!-- Göz -->
+            </g>
+            
+            <!-- ezbro yazısı (bırakılacak) -->
+            <g class="create-animation">
+              <text x="450" y="200" class="ezbro-letter">e</text>
+              <text x="465" y="200" class="ezbro-letter">z</text>
+              <text x="480" y="200" class="ezbro-letter">b</text>
+              <text x="495" y="200" class="ezbro-letter">r</text>
+              <text x="510" y="200" class="ezbro-letter">o</text>
+            </g>
+            
+            <!-- Contribution grid simülasyonu -->
+            <g transform="translate(100, 250)">
+              <!-- EzTheBoss contribution squares (yenilecek) -->
+              <rect x="0" y="0" class="contribution-square eat-animation" fill="#39d353"/>
+              <rect x="15" y="0" class="contribution-square eat-animation" fill="#39d353"/>
+              <rect x="30" y="0" class="contribution-square eat-animation" fill="#39d353"/>
+              <rect x="45" y="0" class="contribution-square eat-animation" fill="#39d353"/>
+              <rect x="60" y="0" class="contribution-square eat-animation" fill="#39d353"/>
+              
+              <!-- ezbro contribution squares (oluşturulacak) -->
+              <rect x="300" y="20" class="contribution-square create-animation" fill="#39d353"/>
+              <rect x="315" y="20" class="contribution-square create-animation" fill="#39d353"/>
+              <rect x="330" y="20" class="contribution-square create-animation" fill="#39d353"/>
+              <rect x="345" y="20" class="contribution-square create-animation" fill="#39d353"/>
+              <rect x="360" y="20" class="contribution-square create-animation" fill="#39d353"/>
+            </g>
+            
+            <!-- Alt açıklama -->
+            <text x="400" y="370" text-anchor="middle" fill="#7d8590" font-size="14">
+              Snake eats "EzTheBoss" and creates "ezbro" ✨
             </text>
           </svg>
           EOF
           
-          # ezbro yazısını oluştur
-          cat > dist/custom/ezbro-text.svg << 'EOF'
-          <svg width="800" height="200" xmlns="http://www.w3.org/2000/svg">
-            <defs>
-              <linearGradient id="neonGradient" x1="0%" y1="0%" x2="100%" y2="0%">
-                <stop offset="0%" style="stop-color:#00FFFF;stop-opacity:1" />
-                <stop offset="50%" style="stop-color:#0080FF;stop-opacity:1" />
-                <stop offset="100%" style="stop-color:#8000FF;stop-opacity:1" />
-              </linearGradient>
-              <filter id="neonGlow">
-                <feGaussianBlur stdDeviation="4" result="coloredBlur"/>
-                <feMerge> 
-                  <feMergeNode in="coloredBlur"/>
-                  <feMergeNode in="SourceGraphic"/>
-                </feMerge>
-              </filter>
-            </defs>
-            
-            <text x="400" y="100" font-family="Arial Black, sans-serif" font-size="56" 
-                  font-weight="bold" text-anchor="middle" fill="url(#neonGradient)" 
-                  filter="url(#neonGlow)" stroke="#00CED1" stroke-width="2">
-              ezbro
-            </text>
-            
-            <text x="400" y="150" font-family="Arial, sans-serif" font-size="20" 
-                  text-anchor="middle" fill="#00FF7F" opacity="0.9">
-              ✨ Revealed by the snake! ✨
-            </text>
-          </svg>
-          EOF
+          echo "🎨 EzTheBoss → ezbro animation created!"
           
-          echo "🎨 Custom animations created!"
-          
-      - name: 📊 Generate Contribution Stats
+      - name: 🎭 Create Story Animation
         run: |
-          echo "📈 EzTheBoss Contribution Stats:" > dist/stats.txt
-          echo "🐍 Snake Animation: Active" >> dist/stats.txt
-          echo "⭐ Repository: boss" >> dist/stats.txt
-          echo "🎯 User: jokerizm3169" >> dist/stats.txt
-          echo "🕒 Generated: $(date)" >> dist/stats.txt
+          # Hikaye animasyonu
+          cat > dist/custom/snake-story.svg << 'EOF'
+          <svg width="600" height="300" xmlns="http://www.w3.org/2000/svg">
+            <defs>
+              <style>
+                .story-text { 
+                  font-family: Arial, sans-serif; 
+                  font-size: 16px; 
+                  fill: #ffffff;
+                  text-anchor: middle;
+                }
+                .phase1 { animation: fadeInOut 12s infinite; animation-delay: 0s; }
+                .phase2 { animation: fadeInOut 12s infinite; animation-delay: 4s; }
+                .phase3 { animation: fadeInOut 12s infinite; animation-delay: 8s; }
+                
+                @keyframes fadeInOut {
+                  0%, 25% { opacity: 0; }
+                  33%, 66% { opacity: 1; }
+                  75%, 100% { opacity: 0; }
+                }
+              </style>
+            </defs>
+            
+            <rect width="600" height="300" fill="#0d1117"/>
+            
+            <text x="300" y="100" class="story-text phase1">
+              🐍 Snake approaches "EzTheBoss"...
+            </text>
+            
+            <text x="300" y="150" class="story-text phase2">
+              🍽️ Snake eats the golden text!
+            </text>
+            
+            <text x="300" y="200" class="story-text phase3">
+              ✨ Snake creates "ezbro" in neon colors!
+            </text>
+          </svg>
+          EOF
           
-      - name: 🚀 Deploy to GitHub Pages
+      - name: 🚀 Deploy Animations
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
-          commit_message: "🐍 EzTheBoss Snake ate the text and revealed ezbro! 🎉"
+          commit_message: "🐍 Snake ate EzTheBoss and created ezbro! ✨"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
-      - name: 🎉 Success Notification
-        run: |
-          echo "🎉 EzTheBoss Snake Animation Successfully Generated!"
-          echo "🐍 Snake ate 'EzTheBoss' and revealed 'ezbro'!"
-          echo "✨ Animation available at: https://raw.githubusercontent.com/jokerizm3169/boss/output/"
